force-app/main/default/objects/prtl_SectionDisplay__mdt/prtl_SectionDisplay__mdt.object-meta.xml
<CustomObject>
    <label>prtl_SectionDisplay</label>
    <pluralLabel>prtl_SectionDisplay</pluralLabel>
</CustomObject>