force-app/main/default/objects/prtl_SectionDisplay__mdt/fields/applicationStatus__c.field-meta.xml
<CustomField>
    <fullName>applicationStatus__c</fullName>
    <description>which application status pertain to this section</description>
    <label>applicationStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>