force-app/main/default/objects/prtl_SectionDisplay__mdt/fields/Final_Review__c.field-meta.xml
<CustomField>
    <fullName>Final_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Review</label>
    <type>Checkbox</type>
</CustomField>