force-app/main/default/objects/prtl_SectionDisplay__mdt/fields/Included_Pages__c.field-meta.xml
<CustomField>
    <fullName>Included_Pages__c</fullName>
    <description>List of the pages that make up this section</description>
    <label>Included Pages</label>
    <length>255</length>
    <type>Text</type>
</CustomField>